[gd_scene load_steps=16 format=3 uid="uid://dgpeqxyiiriwx"]

[ext_resource type="Script" uid="uid://dg4utk7dcltn2" path="res://ARENAS/arena.gd" id="1_3ujay"]
[ext_resource type="PackedScene" uid="uid://6pxseqnx1718" path="res://PLAYERS/wizard_1.tscn" id="1_4j1kj"]
[ext_resource type="PackedScene" uid="uid://il58hnsuqbax" path="res://PLAYERS/wizard_2.tscn" id="2_uo83q"]
[ext_resource type="PackedScene" uid="uid://y5oxfkoo8240" path="res://ARENAS/ball.tscn" id="3_uo83q"]
[ext_resource type="PackedScene" uid="uid://cjh86iplxrtmc" path="res://MENUS/HUD.tscn" id="5_0fd2y"]
[ext_resource type="Shader" uid="uid://c3fmb76te1444" path="res://ARENAS/VHS.gdshader" id="6_2udws"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_444vf"]
size = Vector2(1146, 67.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uo83q"]
size = Vector2(192, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ujay"]
size = Vector2(32, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0fd2y"]
size = Vector2(31, 127.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_2udws"]
radius = 152.84

[sub_resource type="ShaderMaterial" id="ShaderMaterial_55po1"]
shader = ExtResource("6_2udws")
shader_parameter/overlay = false
shader_parameter/scanlines_opacity = 0.1
shader_parameter/scanlines_width = 0.25
shader_parameter/grille_opacity = 0.3
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = true
shader_parameter/roll = true
shader_parameter/roll_speed = 2.0
shader_parameter/roll_size = 5.0
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.01
shader_parameter/noise_opacity = 0.05
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/aberration = 0.00300005
shader_parameter/brightness = 1.5
shader_parameter/discolor = false
shader_parameter/warp_amount = 1.0
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[sub_resource type="Animation" id="Animation_2udws"]
resource_name = "platforms"
length = 14.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Arena/Left_Plat:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 3.9, 5.86667, 7.9, 9.9, 10.9, 12.9, 13.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(320, 384), Vector2(320, 384), Vector2(128, 384), Vector2(128, 384), Vector2(320, 384), Vector2(320, 384), Vector2(384, 384), Vector2(384, 384), Vector2(320, 384)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Arena/Right_Plat:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.03333, 3.9, 5.86667, 7.93333, 9.9, 10.9, 12.9, 13.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(640, 384), Vector2(640, 384), Vector2(832, 384), Vector2(832, 384), Vector2(640, 384), Vector2(640, 384), Vector2(576, 384), Vector2(576, 384), Vector2(640, 384)]
}

[sub_resource type="Animation" id="Animation_55po1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Arena/Left_Plat:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(320, 384)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Arena/Right_Plat:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(640, 384)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a13du"]
_data = {
&"RESET": SubResource("Animation_55po1"),
&"platforms": SubResource("Animation_2udws")
}

[node name="Node2D" type="Node2D"]
script = ExtResource("1_3ujay")

[node name="Arena" type="Node2D" parent="."]

[node name="walls" type="Node2D" parent="Arena"]

[node name="top" type="StaticBody2D" parent="Arena/walls"]
collision_layer = 2
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arena/walls/top"]
position = Vector2(576, 31.75)
shape = SubResource("RectangleShape2D_444vf")

[node name="right" type="StaticBody2D" parent="Arena/walls"]
collision_layer = 2
collision_mask = 7

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Arena/walls/right"]
position = Vector2(1088, 0)
polygon = PackedVector2Array(0, 0, 64, 0, 64, 640, 0, 640, 0, 384, 32, 384, 32, 256, 0, 256)

[node name="left" type="StaticBody2D" parent="Arena/walls"]
collision_layer = 2
collision_mask = 7

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Arena/walls/left"]
polygon = PackedVector2Array(0, 0, 64, 0, 64, 256, 32, 256, 32, 384, 64, 384, 64, 640, 0, 640)

[node name="bottom" type="StaticBody2D" parent="Arena/walls"]
position = Vector2(576, 609.625)
collision_layer = 2
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arena/walls/bottom"]
shape = SubResource("RectangleShape2D_444vf")

[node name="ColorRect4" type="ColorRect" parent="Arena/walls"]
offset_top = 576.0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="ColorRect5" type="ColorRect" parent="Arena/walls"]
offset_right = 64.0
offset_bottom = 640.0
color = Color(0, 0, 0, 1)

[node name="ColorRect6" type="ColorRect" parent="Arena/walls"]
offset_left = 1088.0
offset_right = 1152.0
offset_bottom = 640.0
color = Color(0, 0, 0, 1)

[node name="ColorRect7" type="ColorRect" parent="Arena/walls"]
offset_right = 1152.0
offset_bottom = 64.0
color = Color(0, 0, 0, 1)

[node name="Background" type="ColorRect" parent="Arena/walls"]
z_index = -2
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.136826, 0.136826, 0.136826, 1)

[node name="BackBorder" type="ColorRect" parent="Arena/walls"]
z_index = -3
offset_left = -248.0
offset_top = -256.0
offset_right = 1408.0
offset_bottom = 904.0
color = Color(0, 0, 0, 1)

[node name="Left_Plat" type="StaticBody2D" parent="Arena"]
position = Vector2(320, 384)
collision_layer = 2
collision_mask = 7

[node name="ColorRect8" type="ColorRect" parent="Arena/Left_Plat"]
z_index = 1
offset_right = 192.0
offset_bottom = 40.0
color = Color(0, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arena/Left_Plat"]
position = Vector2(96, 20)
shape = SubResource("RectangleShape2D_uo83q")

[node name="Right_Plat" type="StaticBody2D" parent="Arena"]
position = Vector2(640, 384)
collision_layer = 2
collision_mask = 7

[node name="ColorRect9" type="ColorRect" parent="Arena/Right_Plat"]
z_index = 1
offset_right = 192.0
offset_bottom = 40.0
color = Color(0, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arena/Right_Plat"]
position = Vector2(96, 20)
shape = SubResource("RectangleShape2D_uo83q")

[node name="player1" parent="." instance=ExtResource("1_4j1kj")]
position = Vector2(192, 568)

[node name="player2" parent="." instance=ExtResource("2_uo83q")]
position = Vector2(960, 568)

[node name="Ball" parent="." instance=ExtResource("3_uo83q")]
position = Vector2(576, 560)

[node name="Goal_Right" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Goal_Right"]
position = Vector2(1104, 320)
shape = SubResource("RectangleShape2D_3ujay")

[node name="greengoal" type="ColorRect" parent="Goal_Right"]
offset_left = 1088.0
offset_top = 256.0
offset_right = 1120.0
offset_bottom = 384.0
color = Color(0, 0.175341, 0.0765429, 1)

[node name="Goal_Left" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal_Left"]
position = Vector2(47.5, 319.75)
shape = SubResource("RectangleShape2D_0fd2y")

[node name="purpgoal" type="ColorRect" parent="Goal_Left"]
offset_left = 32.0
offset_top = 256.0
offset_right = 64.0
offset_bottom = 384.0
color = Color(0.256245, 2.1346e-05, 0.230627, 1)

[node name="Zone_Right" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Polygon2D2" type="Polygon2D" parent="Zone_Right"]
z_index = -2
position = Vector2(1024, 0)
color = Color(1, 1, 1, 0.243137)
polygon = PackedVector2Array(64, 168, 104, 176, 112, 464, 56, 472, 0, 456, -56, 408, -88, 328, -72, 256, -32, 208, 8, 184)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Zone_Right"]
visible = false
position = Vector2(1088, 320)
shape = SubResource("CircleShape2D_2udws")

[node name="Zone_Left" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zone_Left"]
visible = false
position = Vector2(64, 320)
shape = SubResource("CircleShape2D_2udws")

[node name="Polygon2D" type="Polygon2D" parent="Zone_Left"]
z_index = -2
color = Color(1, 1, 1, 0.243137)
polygon = PackedVector2Array(64, 168, 104, 176, 152, 200, 184, 232, 216, 296, 216, 344, 200, 400, 160, 440, 112, 464, 56, 472, 0, 456, 8, 184)

[node name="HUD" parent="." instance=ExtResource("5_0fd2y")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_55po1")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_a13du")
}
autoplay = "platforms"
speed_scale = 0.25

[connection signal="body_entered" from="Goal_Right" to="." method="_on_goal_right_body_entered"]
[connection signal="body_entered" from="Goal_Left" to="." method="_on_goal_left_body_entered"]
[connection signal="body_entered" from="Zone_Right" to="." method="_on_zone_right_body_entered"]
[connection signal="body_exited" from="Zone_Right" to="." method="_on_zone_right_body_exited"]
[connection signal="body_entered" from="Zone_Left" to="." method="_on_zone_left_body_entered"]
[connection signal="body_exited" from="Zone_Left" to="." method="_on_zone_left_body_exited"]
